# raymon

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  roadmap.md  tools.json
.devana/: 20260625T094600Z-P0-empty-auth-token-file.md  20260625T094601Z-P1-mcp-search-misses-newest.md  20260625T094602Z-P2-ctrl-l-clear-bypass-update.md  20260625T094603Z-P2-tui-duplicate-update-rows.md  20260625T094604Z-P2-ingest-storage-state-split.md  20260625T094605Z-P2-concurrent-uuid-ingest-race.md  20260625T094606Z-P2-mcp-broadcast-lag-drop.md  20260625T120000Z-P1-retention-counts-physical-lines.md  20260625T120001Z-P2-duplicate-peer-on-reinitialize.md  20260625T120002Z-P3-get-entries-empty-comma-segment.md  20260625T120003Z-P3-archive-flush-error-swallowed.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  codspeed.yml  release-prepare.yml  release.yml
benches/: raymon_ingest_perf.rs  raymon_perf.rs  raymon_storage_perf.rs  raymon_tui_perf.rs
crates/raymon-cli/: Cargo.toml
crates/raymon-cli/src/: main.rs
crates/raymon-core/: Cargo.toml
crates/raymon-core/src/: lib.rs
crates/raymon-ingest/: Cargo.toml
crates/raymon-mcp/: Cargo.toml
crates/raymon-mcp/src/: lib.rs
crates/raymon-storage/: Cargo.toml
crates/raymon-storage/src/: jsonl.rs
crates/raymon-tui/src/: lib.rs
legacy/crates/: README.md
legacy/crates/raymon-ingest/src/: lib.rs
legacy/crates/raymon-storage/src/: blobs.rs  index.rs  lib.rs
legacy/crates/raymon-tui/: Cargo.toml
scripts/: package-release.ps1  package-release.sh  resolve-version.sh  run_divan.sh
skills/raymon/: SKILL.md
specs/agent-cli/: design.md  requirements.md  tasks.md
specs/agent-core/: design.md  requirements.md  tasks.md
specs/agent-ingest/: design.md  requirements.md  tasks.md
specs/agent-mcp/: design.md  requirements.md  tasks.md
specs/agent-storage/: design.md  requirements.md  tasks.md
specs/agent-tui/: design.md  requirements.md  tasks.md
specs/orchestration/: design.md  requirements.md  tasks.md
src/: cli.rs  colors.rs  lib.rs  main.rs  raymon_core.rs  raymon_ingest.rs  raymon_mcp.rs  raymon_tui.rs  sanitize.rs
src/cli/: http.rs
src/raymon_mcp/: schema.rs
src/raymon_storage/: blobs.rs  index.rs  jsonl.rs  mod.rs
src/raymon_tui/: archive.rs
tests/: ray.php  ray_php_local.rs
