[package]
name = "raymon"
version = "0.5.0"
edition = "2021"
license = "MIT"
rust-version = "1.89"
description = "Stateful MCP server and TUI for Ray-style logs"
readme = "README.md"
homepage = "https://github.com/bnomei/raymon"
repository = "https://github.com/bnomei/raymon"
documentation = "https://docs.rs/raymon"
keywords = ["mcp", "tui", "logging", "observability", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".DS_Store", "specs/**"]

[dependencies]
arboard = "3"
axum = "0.7"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
itoa = "1.0.17"
memchr = "2.8.0"
ratatui = "0.28"
rapidfuzz = "0.5"
rayon = { version = "1", optional = true }
regex = "1"
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session", "tower"] }
schemars = { version = "1", features = ["derive", "chrono04"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "2"
smallvec = "1.15.1"
smol_str = "0.3.5"
tempfile = "3"
thiserror = "2"
tiktoken-rs = "0.9.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
divan = { version = "4.3.0", package = "codspeed-divan-compat" }
rstest = "0.26"

[features]
default = ["rayon"]

[[bench]]
name = "raymon_perf"
harness = false

[[bench]]
name = "raymon_tui_perf"
harness = false

[[bench]]
name = "raymon_storage_perf"
harness = false

[[bench]]
name = "raymon_ingest_perf"
harness = false
