[package]
name = "raymon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Stateful MCP server and TUI for Ray-style logs"
readme = "../../README.md"
homepage = ""
repository = ""
keywords = ["mcp", "tui", "logging", "observability", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
raymon-core = { path = "../raymon-core", version = "0.1.0" }
raymon-storage = { path = "../raymon-storage", version = "0.1.0" }
raymon-ingest = { path = "../raymon-ingest", version = "0.1.0" }
raymon-mcp = { path = "../raymon-mcp", version = "0.1.0" }
raymon-tui = { path = "../raymon-tui", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
tempfile = "3"
