[package]
name = "raymon-ingest"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
raymon-core = { path = "../raymon-core" }
raymon-storage = { path = "../raymon-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
axum.workspace = true
tokio.workspace = true

[dev-dependencies]
rstest.workspace = true
