[package]
name = "raymon-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
raymon-core = { path = "../raymon-core" }
rmcp = { workspace = true }
schemars = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
