[package]
name = "raymon-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
raymon-core = { path = "../raymon-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
rayon.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true
