[package]
name = "raymon-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
arboard = "3"
crossterm.workspace = true
ratatui.workspace = true
rapidfuzz.workspace = true
raymon-core = { path = "../raymon-core" }
raymon-storage = { path = "../raymon-storage" }
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex = "1"
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
